--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <!-- Students' names will be added here -->
       
         <li>
+          Uddeshya
                Patel Muhammad - I am GitHub Campus Expert ❤️
         </li>
  
