--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <li>
                Patel Muhammad - I am GitHub Campus Expert ❤️
         </li>
+        <li>
+          uddeshya maharaj - i want more stickers
+        </li>
  
 
 
